@@ -14,8 +14,8 @@
   {$MODE objfpc}{$H+}
   {$INTERFACES corba}
   {$DEFINE SQLite3Broker}
-  {.$DEFINE MSSQLBroker}
   {$IF ((FPC_VERSION >= 2) and (FPC_RELEASE >= 6) and (FPC_PATCH >= 1))}
+    {$DEFINE MSSQLBroker}
     {$DEFINE JSON_SUPPORT}
   {$ENDIF}
 {$ENDIF}
