@@ -1,6 +1,14 @@
 Release notes
 ==========================================================
 
+(2012-08-06)
+
+- Started TghDBTableAdapter class;
+- Started new JSON support using TghDBTableAdapter class;
+- Renamed gh_dbsqldbbroker unit to gh_dbsqldb;
+- Renamed gh_dbzeosbroker unit to gh_dbzeos;
+
+
 (2012-07-01)
 
 - Support for Constraints: Default, Unique and Check constraints.
